<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_live_result"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/live_layout_margin"
    android:paddingTop="@dimen/live_layout_margin"
    android:paddingEnd="@dimen/live_layout_margin"
    android:paddingBottom="72dp"
    android:background="@color/black_overlay"
    android:layout_alignParentBottom="true"
    android:fitsSystemWindows="true"
    android:visibility="gone">

    <LinearLayout
        android:id="@+id/layout_control_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingTop="@dimen/button_margin_top"
        android:gravity="center_vertical|end">
        <Button
            android:id="@+id/btn_delete_live"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:text="@string/btn_delete"
            android:textSize="@dimen/button_text_size_medium"
            android:textColor="@color/result_btn_txt_color"
            android:focusable="true"
            android:background="@drawable/result_btn"/>

        <Button
            android:id="@+id/btn_post_live"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:text="@string/btn_post"
            android:textSize="@dimen/button_text_size_medium"
            android:textColor="@color/result_btn_txt_color"
            android:focusable="true"
            android:background="@drawable/result_btn"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/layout_control_btn"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/white"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post_live_privacy_description"
            android:textSize="@dimen/text_size_medium"
            android:lineSpacingExtra="@dimen/text_line_space"
            android:layout_marginTop="@dimen/live_layout_margin"
            style="@style/TextAppearance.AppCompat.Medium.Inverse"/>

        <LinearLayout
            android:id="@+id/result_privacy_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/live_layout_margin">

            <ImageView
                android:id="@+id/result_privacy_icon"
                android:layout_width="@dimen/live_user_avatar_size"
                android:layout_height="@dimen/live_user_avatar_size"
                android:scaleType="centerInside" />
            <TextView
                android:id="@+id/privacy_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/live_layout_settings_child_margin_horizontal"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@android:color/white" />
            <ImageView
                android:layout_width="@dimen/live_user_avatar_size"
                android:layout_height="@dimen/live_user_avatar_size"
                android:src="@drawable/item_row_chevron_white" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_live_statistics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout_privacy"
        android:paddingTop="@dimen/live_layout_margin"
        android:paddingBottom="@dimen/live_layout_margin"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/total_viewers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:drawableStart="@drawable/ic_live_views"
            android:drawablePadding="@dimen/text_icon_padding"
            style="@style/TextAppearance.AppCompat.Small.Inverse"/>
        <TextView
            android:id="@+id/total_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/total_viewers"
            android:drawableStart="@drawable/ic_live_comments"
            android:drawablePadding="@dimen/text_icon_padding"
            android:layout_marginLeft="@dimen/live_layout_margin"
            style="@style/TextAppearance.AppCompat.Small.Inverse"/>
        <TextView
            android:id="@+id/total_likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/total_comments"
            android:drawableStart="@drawable/ic_live_likes"
            android:drawablePadding="@dimen/text_icon_padding"
            android:layout_marginLeft="@dimen/live_layout_margin"
            style="@style/TextAppearance.AppCompat.Small.Inverse"/>

    </LinearLayout>

    <TextView
        android:id="@+id/live_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout_live_statistics"
        android:text="@string/total_live_time"
        android:textSize="@dimen/text_size_x_large"
        android:textColor="@color/result_text_color"
        android:paddingTop="@dimen/live_layout_margin"
        style="@style/TextAppearance.AppCompat.Medium.Inverse"/>
</RelativeLayout>