<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/live_layout_settings_margin_horizontal"
    android:paddingEnd="@dimen/live_layout_settings_margin_horizontal"
    android:paddingBottom="@dimen/live_layout_input_margin_bottom"
    android:background="@color/black_overlay">

    <android.support.design.widget.TextInputLayout
        xmlns:android.support.design="http://schemas.android.com/apk/res-auto"
        android:id="@+id/layout_live_description"
        android:theme="@style/TextInputLayoutTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/live_layout_input_margin_top"
        android.support.design:hintTextAppearance="@style/HintTextAppearance">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/live_description_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/live_description_hint"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@android:color/white"
            android:textCursorDrawable="@drawable/edit_text_cursor"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/layout_4k_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@id/layout_live_description"
        android:layout_marginTop="@dimen/live_layout_settings_child_margin_vertical">

        <ImageView
            android:layout_width="@dimen/live_user_avatar_size"
            android:layout_height="@dimen/live_user_avatar_size"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_live_settings_4k"
            android:scaleType="centerInside" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/live_layout_settings_child_margin_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/live_settings_hq_title"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/live_settings_hq_summary"
                android:textSize="@dimen/text_size_small"
                android:textColor="@android:color/white" />
        </LinearLayout>
        <Switch
            android:id="@+id/settings_4k_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:checked="true"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_privacy_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@id/layout_4k_setting"
        android:layout_marginTop="@dimen/live_layout_settings_child_margin_vertical">

        <ImageView
            android:id="@+id/privacy_icon"
            android:layout_width="@dimen/live_user_avatar_size"
            android:layout_height="@dimen/live_user_avatar_size"
            android:scaleType="centerInside" />
        <TextView
            android:id="@+id/privacy_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/live_layout_settings_child_margin_horizontal"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@android:color/white" />
        <ImageView
            android:id="@+id/privacy_chevron"
            android:layout_width="@dimen/live_user_avatar_size"
            android:layout_height="@dimen/live_user_avatar_size"
            android:src="@drawable/item_row_chevron_white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_user_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/layout_privacy_setting"
        android:orientation="horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <ImageView
            android:id="@+id/user_avatar"
            android:layout_width="@dimen/live_user_avatar_size"
            android:layout_height="@dimen/live_user_avatar_size"
            android:scaleType="centerInside" />
        <TextView
            android:id="@+id/user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/live_layout_settings_child_margin_horizontal"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@android:color/white" />
        <ImageView
            android:id="@+id/user_chevron"
            android:layout_width="@dimen/live_user_avatar_size"
            android:layout_height="@dimen/live_user_avatar_size"
            android:src="@drawable/item_row_chevron_white" />
    </LinearLayout>

</RelativeLayout>